fix: Root too large

--- a/packages/plant-playground/source/index.css
+++ b/packages/plant-playground/source/index.css
@@ -1,24 +1,21 @@
-@import '@shoelace-style/shoelace/dist/themes/light.css';
-@import '@shoelace-style/shoelace/dist/themes/dark.css';
+@import "@shoelace-style/shoelace/dist/themes/light.css";
+@import "@shoelace-style/shoelace/dist/themes/dark.css";
 
-html {
-  width: 100vw;
+* {
+  box-sizing: border-box;
 }
 
-html,
 body {
-  height: 100vh;
-
   padding: 0;
   margin: 0;
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
   font: 16px sans-serif;
   background-color: var(--sl-color-neutral-0);
   color: var(--sl-color-neutral-900);
+
+  overflow-y: scroll;
 }
 
 .app {
